# ToyEngine

./: .gitignore  CMakeLists.txt
app/: application.cpp
engine/: glad.c  window.cpp
engine/renderer/: loader.cpp  loader.h  renderer.cpp  renderer.h  shader.cpp  shader.h  vertex_buffer_layout.h
engine/renderer/primitives/: index_buffer.cpp  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp
res/: default.glsl
src/core/: core.h  window.h
src/models/: raw_model.cpp  raw_model.h
src/renderer/: renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex_buffer_layout.h
src/renderer/primitives/: index_buffer.cpp  index_buffer.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h
src/res/: default.glsl
